--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -10,7 +10,6 @@ h3 {
     color: #d1d0d0;
     font-weight: bold;
     text-shadow: 0 0 .1rem #f8f8f8, 0 0 1rem currentColor;
-
 }
 
 .navegacao {
@@ -18,15 +17,13 @@ h3 {
     margin-top: .5rem;
     margin-bottom: -2rem;
     font-size: 18px;
-
 }
 
 .nav-link {
-    color:#44b3af;
+    color:#fafafa;
     font-weight: bold;
 }
 
-.img-logo-rod {
-    width: 20rem;
-    margin-bottom: -2rem;
+.slogan {
+    margin-top: -.4rem;
 }
