--- a/src/Components/Links/Links.css
+++ b/src/Components/Links/Links.css
@@ -8,10 +8,10 @@
 .div-link {
     width: 80%;
     padding: 1rem 1rem;
-    background: #053638;
-    color: #bfc2c2;
+    background: transparent;
+    color: #0a81f0;
     border-radius: 0.9375rem;
     box-shadow: 0 0 .5rem #272727, 0 0 .5rem currentColor;
 
-    margin: -.5rem 0 1.2rem 0;
+    margin: 0 0 1.2rem 0;
 }
