--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,21 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
-  background: linear-gradient(#021214, #032024);
+  background-color: #021618;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+@keyframes fadeIntext {
+  from {
+      opacity: 0;
+      
+  }
+  to {
+      opacity: 1;
+  }
 }
